# rusicsetup

./: .env  Cargo.toml  README.md  RUN.sh  rusic.service  rusicsetup.py  test.sh
LICENSES/: GPLv3.0  screenshot.jpg.licence.txt
src/: main.rs  rusicdb.rs  setup.rs  types.rs
src/rusicdb/: db_album.rs  db_artist.rs  db_main.rs  db_playlist.rs  db_tables.rs
src/setup/: rusic_album.rs  rusic_artist.rs  rusic_process_music.rs  rusic_process_music_images.rs  rusic_utils.rs  rusic_walk_dirs.rs
