[package]
name = "rusicsetup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
image = "0.24.5"
md-5 = "0.10.5"
filesize = "0.2.0"
threadpool = "1.8.1"
num_cpus = "1.15.0"
id3 = "1.7.0"
mp3-duration = "0.1.10"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rusqlite = { version = "0.29.0", features = ["bundled"] }
byte-unit = "4.0.19"
anyhow = "1.0.72"
log = "0.4.0"
env_logger = "0.10.0"
webp = "0.2.5"
rand = "0.8.5"
rayon = "1.10.0"
dotenv = "0.15.0"
clap = "4.5.4"
